Add validations to Details